Add project name in GetUserProjects; other quick fixes
